# coding_exercises

./: .gitignore  MAKEFILE  README.md
C++/hashmap/: CMakeLists.txt  MAKEFILE  README.md
C++/hashmap/src/: hashmap.cpp  hashmap.hpp  hashmap.inl  main.cpp
C++/vector/: CMakeLists.txt  MAKEFILE  README.md
C++/vector/src/: main.cpp  vector.cpp  vector.hpp  vector.inl
C/heap_alloc/: .gitignore  CMakeLists.txt  MAKEFILE  README.md
C/heap_alloc/src/: heap.c  heap.h  main.c
C/lib/: custom_testing.h
Rust/simple_multi-user_chat/: Cargo.toml  README.md
Rust/tokenizer/src/: main.rs  tokenizer.rs
Rust/tokenizer/tests/: tokenizer_tests.rs
Rust/vector/src/: vector.rs
src/: heap.c  heap.h  main.c
